fixed overflow such that it doesnt expand the list view div beyond its initial size

--- a/src/css/List.css
+++ b/src/css/List.css
@@ -1,3 +1,5 @@
 .List{
     padding-left:0px;
+    height: 100%;
+    overflow-y: scroll;
 }
